@@ -7,6 +7,9 @@ Paths are now expected to be identical.
 (RB=324987)
 Generated included unnamed union in the defining class.
 
+(RB=326034)
+Update PathKeys.
+
 1.19.1
 ------
 (RB=317297)
